--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-wekongsi-agent-landing-page",
+  "name": "copy-of-wekongsi-agent-landing-page-(html)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
